crates/runtime-datafusion-udfs/src/snapshots/runtime_datafusion_udfs__bucket__tests__null_input.snap
---
source: crates/runtime-datafusion-udfs/src/bucket.rs
expression: result
---
+----------------------------+
| ColumnarValue(ScalarValue) |
+----------------------------+
|                            |
+----------------------------+
